# en-croissant

./: AGENTS.md
.continue/mcpServers/: new-mcp-server copy 2.yaml  new-mcp-server copy 3.yaml  new-mcp-server copy.yaml  new-mcp-server.yaml
src-tauri/: AGENTS.md  Cargo.toml
src-tauri/src/: chess.rs  error.rs  fide.rs  fs.rs  main.rs  oauth.rs  opening.rs  pgn.rs  puzzle.rs
src-tauri/src/db/: mod.rs  search.rs
src/utils/tests/: misc.test.ts
