[package]
name = "en-croissant"
version = "0.11.1"
description = "A Modern Chess Database"
authors = ["Francisco Salgueiro <fgcdbs@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/franciscoBSalgueiro/en-croissant"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
zip = "4.3.0"
tokio = { version = "1.33", features = ["full"] }
futures-util = "0.3.24"
reqwest = { version = "0.12.5", features = ["stream", "blocking", "json"] }
shakmaty = "0.27"
pgn-reader = "0.26.0"
csv = "1.1.6"
lazy_static = "1.4.0"
btoi = "0.4.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
bzip2 = "0.6.0"
zstd = "0.13"
diesel = { version = "2.0.2", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
rayon = "1.6.1"
chrono = "0.4.23"
derivative = "2.2.0"
dashmap = "6.0.1"
once_cell = "1.17.1"
rand = "0.9.2"
vampirc-uci = "0.11.1"
tempfile = "3.6.0"
fs2 = "0.4"
quick-xml = { version = "0.31.0", features = ["serialize"] }
specta = { version = "^2.0.0-rc.22", features = ["derive"] }
tauri-specta = { version = "^2.0.0-rc.21", features = ["derive", "typescript"] }
strsim = "0.11.0"
bincode = "2.0.0-rc.3"
thiserror = "2.0.14"
log = "0.4.20"
oauth2 = "5.0.0"
axum = "0.8.4"
hyper = { version = "0.14", features = ["server"] }
tar = "0.4.40"
flate2 = "1.0"
sysinfo = "0.29.10"
governor = "0.10.1"
nonzero_ext = "0.3.0"
specta-typescript = "0.0.9"
tauri-plugin-shell = "2.0.1"
tauri-plugin-http = "2.0.1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-os = "2.0.1"
tauri-plugin-cli = "2.0.1"
tauri-plugin-updater = "2.0.1"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
open = "3.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
